# almadati

./: .env  .gitignore  Dockerfile  README.md  docker-compose-override.yml  docker-compose-traefik.yml  docker-compose.yml  gunicorn.service  nginx_site_available  pyproject.toml  read_from_fastapi_to_flet.md  requirements.txt
almadati/: main.py  myadmin.py  myalma.py
almadati/paginator/: paginator.py
almadati/templates/: config.html  documentazione.html  logout.html  partial_docenti.html  partial_tuttidocenti.html  partial_uni.html  universita.html
app/: auth.py  documentazione.md  main.py  myadmin.py  myalma.py  mylangchain.py  threading_io.py
app/dbfiles/: fe01ce2a7fbac8fafaed7c982a04e229_gestione_docenti.csv  fe01ce2a7fbac8fafaed7c982a04e229adozioni_alma.csv  fe01ce2a7fbac8fafaed7c982a04e229docenti_router_corretti.csv  fe01ce2a7fbac8fafaed7c982a04e229docenti_router_selezionati.csv  fe01ce2a7fbac8fafaed7c982a04e229tuttidocenti_res.csv  shared.db
app/paginator/: exceptions.py  utils.py
app/templates/: admin_login.html  admin_login_list.html  adozioni.html  base.html  dashboard.html  docenti.html  dummy_abbonamento_api.html  form.html  insegnamenti.html  libri.html  login.html  nuove_adozioni_form.html  partial_admin_login_list.html  partial_adozioni.html  partial_caricafile.html  partial_cerca_adozioni.html  partial_config.html  partial_copiesaggio_prof_adozioni.html  partial_insegnamenti.html  partial_isbn_adozioni.html  partial_isbn_bar.html  partial_libri.html  partial_nuove_adozioni.html  partial_promozione_docenti.html  partial_router_cerca_docenti.html  (+17 more)
(+4 files in other folders)
