[project]
name = "almadati"
version = "0.1.0"
description = "Gestire i dati delle adozioni con quelli di AlmaLibri, integrati in un'unica applicazione "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "environs>=14.1.1",
    "fastapi[standard]>=0.115.8",
    "pyjwt>=2.0.0",
    "langchain-community>=0.3.18",
    "langchain-openai>=0.3.7",
    "langchain>=0.3.19",
    "pandas>=2.2.3",
    "passlib>=1.7.4",
    "sse-starlette>=2.2.1",
    "psycopg[binary]>=3.2.5",
    "bcrypt>=4.2.1",
]

[project.urls]
Repository = "https://github.com/claudiotubertini/almadati"